@@ -16,11 +16,22 @@
  */
 package org.apache.solr.request;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 
 /**
  * @deprecated use org.apache.solr.response.PHPResponseWriter
  */
 public class PHPResponseWriter extends org.apache.solr.response.PHPResponseWriter 
 {
+  private static Logger log = LoggerFactory.getLogger(PHPResponseWriter.class.getName());
+
+  
+  public PHPResponseWriter(){
+    super();
+    log.warn(PHPResponseWriter.class.getName()+" is deprecated. Please use the corresponding class in org.apache.solr.response");
+
+  }
 	
 }
