@@ -16,11 +16,21 @@
  */
 package org.apache.solr.request;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 
 /**
  * @deprecated use org.apache.solr.response.XMLResponseWriter
  */
 public class XMLResponseWriter extends org.apache.solr.response.XMLResponseWriter 
 {
-	
+  private static Logger log = LoggerFactory.getLogger(XMLResponseWriter.class.getName());
+
+  
+  public XMLResponseWriter(){
+    super();
+    log.warn(XMLResponseWriter.class.getName()+" is deprecated. Please use the corresponding class in org.apache.solr.response");
+
+  } 
 }
